@@ -1,3 +1,8 @@
+2017-07-27  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* config/sparc/sparc.c (sparc_option_override): Set MASK_FSMULD flag
+	earlier and only if MASK_FPU is set.  Adjust formatting.
+
 2017-07-27  Martin Liska  <mliska@suse.cz>
 
 	* auto-profile.c (autofdo_source_profile::update_inlined_ind_target):
